test/resources/inspections/latex/filenotfound/commandexpansion/nest/sub.tex
\providecommand{\main}{..}
%! Suppress = FileNotFound
\documentclass[\main/main.tex]{subfiles}

\begin{document}
    \include{\main/nest/sub2.tex}
    \include{<error descr="File 'nest/sub2.tex' not found">nest/sub2.tex</error>}
\end{document}